# airbyte

airbyte-ci/connectors/pipelines/: pyproject.toml
airbyte-integrations/connectors/destination-clowder/: README.md  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/destination-clowder/destination_clowder/: __init__.py  destination.py  run.py  spec.json
airbyte-integrations/connectors/source-s3-objects/: README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
airbyte-integrations/connectors/source-s3-objects/integration_tests/: configured_catalog.json
airbyte-integrations/connectors/source-s3-objects/source_s3_objects/: __init__.py  run.py  source.py  spec.yaml
airbyte-integrations/connectors/source-s3-objects/source_s3_objects/schemas/: objects.json
airbyte-integrations/connectors/source-s3-objects/unit_tests/: test_incremental_streams.py  test_source.py  test_streams.py
